<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/alt_background"
        android:scaleType="centerCrop"
        android:src="@drawable/dbkg_und_blur" />

    <RelativeLayout
        android:id="@+id/panel_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/gametitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="345dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:shadowColor="@color/sao_grey"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/sao_white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="355dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/alt_cover"
            android:scaleType="fitCenter"
            android:src="@drawable/dbkg_und" />

        <ListView
            android:id="@+id/games"
            android:layout_width="311dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="3dp"
            android:fadingEdgeLength="48dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none" />

        <RelativeLayout
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/btn_settings"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/settings_button"
                android:clickable="true"
                android:contentDescription="@string/alt_settings" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
