<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/alt_background"
        android:scaleType="centerCrop"
        android:src="@drawable/dbkg_und_blur" />

    <RelativeLayout
        android:id="@+id/panel_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/gametitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="345.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="10.0dip"
            android:gravity="center"
            android:shadowColor="@color/sao_grey"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="2.0"
            android:textColor="@color/sao_white"
            android:textSize="18.0sp"
            android:layout_marginEnd="10.0dip"
            android:layout_marginStart="345.0dip" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="300.0dip"
            android:layout_marginTop="40.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginBottom="100.0dip"
            android:contentDescription="@string/alt_cover"
            android:scaleType="fitCenter"
            android:src="@drawable/dbkg_und"
            android:layout_marginEnd="20.0dip"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="300.0dip" />

        <ListView
            android:id="@+id/games"
            android:layout_width="300.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginBottom="8.0dip"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="3.0dip"
            android:fadingEdgeLength="54.0dip"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20.0dip" />

        <RelativeLayout
            android:layout_width="240.0dip"
            android:layout_height="65.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20.0dip">

            <ImageView
                android:id="@+id/btn_settings"
                android:layout_width="65.0dip"
                android:layout_height="65.0dip"
                android:layout_alignParentRight="true"
                android:background="@drawable/settings_button"
                android:clickable="true"
                android:contentDescription="@string/alt_settings"
                android:layout_alignParentEnd="true"
                android:focusable="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
